// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane DB — golden (recorded on the untouched base) /copilot?capabilityId=schedule at 390 (CopilotShell, no autoSubmitSeed) 1`] = `
{
  "lines": 75,
  "sha256": "7afd87d304fa74e658a21a513940205ab562ec1d24f173af980e5e5225a5a5c1",
}
`;

exports[`lane DB — golden (recorded on the untouched base) /schedule at 390 with the "Tell me what to change" sheet open (ScheduleEditPanel, modal) 1`] = `
{
  "lines": 774,
  "sha256": "46193713317f439dddd9304362f90fd6135004b29bdacc0880306233279d98e9",
}
`;

exports[`lane DB — golden (recorded on the untouched base) /schedule-pro at native 1000 × 700 (the legacy branch) 1`] = `
{
  "lines": 404,
  "sha256": "7235deecc525f672c679136ab63a50ab8cb69a57f5ca55ce889f682b79e99885",
}
`;

exports[`lane DB — golden (recorded on the untouched base) /schedule-pro?projectId at 390 iOS: the narrow gate 1`] = `
{
  "lines": 53,
  "sha256": "c6b58cd5d132df1fbfa7919db12fa6cc17da9cdca6346d14f1a63f4be03ffd1c",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) EarnedValuePanel card + its sheet 1`] = `
{
  "lines": 132,
  "sha256": "335c626ff7a610cd11d03f55f6dc878eba54585056e1e59343f5f10ce8aab2de",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) ScheduleShareSheet, open (full and by trade) 1`] = `
{
  "lines": 53,
  "sha256": "8218a77c64a7f113a2eacb973026220a5a2ab70bbbf48f94757c6a831ab27693",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) ScheduleShareSheet, open (full and by trade) 2`] = `
{
  "lines": 88,
  "sha256": "6312006955ecb1db0340925fc917f83a1e435b20430502d5a0f9388f14b27bc1",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) SubUpdatesPanel card + its sheet 1`] = `
{
  "lines": 118,
  "sha256": "e751e96730c6e089e8069064dcb2c558ca67268277c551a8a06ac191d388bf10",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) WeatherRescheduleModal, open 1`] = `
{
  "lines": 88,
  "sha256": "6a09ffd9673edab6926985322b90b6cd8d8c19c124e02238362325b7b149e5b4",
}
`;

exports[`lane DB — golden (recorded on the untouched base) components at 390 (every sheet rendered) WeatherReschedulePrompt banner + its sheet 1`] = `
{
  "lines": 108,
  "sha256": "96c9623352e03aa84cafaf27176dafb749c95d344b26808ea111f58c9db8e7bf",
}
`;
